[package]
name = "thetime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = {"version" = "1.35.1", features = ["full"] }
thetime = "0.5.6"
serde_json = "1.0.111"
reqwest = { version = "0.11", features = ["json"] }